<resources>
    <string name="app_name">PUBG Tips</string>
    <string name="app_id">ca-app-pub-5006897003986415~3679281942</string>
    <string name="banner_id">ca-app-pub-5006897003986415/6762764372</string>
    <string name="interstitial_id">ca-app-pub-5006897003986415/9645924496</string>
    <string name="get_start_text">
        "PUBG’s mobile versions, both for Android and iPhone, "
        "translate large-scale battle royale to the small screen remarkably well—and best of all, "
        "they’re completely free."
    </string>
    <string name="vehicle">
        These cars, jeeps and even speed boats are important to map movement. moving to the center of the map from a far away direction is easily done by finding some transportation for yourself or teammates. For example, with the UAZ Closed Top,
        you navigate rather safely since it would require a direct head shot or body shot to take damage while driving in this jeep.
    </string>
    <string name="tips_text">
        "Read our guide on how to become a master of Player Unknown\'s Battlegrounds on mobile."
        "Our top tips and tricks for PUBG to help you get …"
        "Check out the full list of PUBG Mobile tips and tricks to learn where to land,"
        "important loot, and other tips for beginners and experts!"
    </string>
    <string name="weapon_tire_list_text">
        "Welcome to our PlayerUnknown’s Battlegrounds Best Weapons Tier List."
        "You can view the TOP 3 Best Guns in PUBG for each weapon type, like Snipers, Assault Rifles, and even Shotguns."
        "The PUBG Best Weapons Tier List is based on accumulated weapons stats"
    </string>
    <string name="ar_description">
        "Click to show whole Assault Rifles (AR) sorted by Rank."
        "The Rank is according to the damage of the Weapon"
    </string>
    <string name="sg_description">
        "Click to show whole Shotgun sorted by Rank."
        "The Rank is according to the damage of the Weapon"
    </string>
    <string name="smg_description">
        "Click to show whole Sub Machine Guns sorted by Rank."
        "The Rank is according to the damage of the Weapon"
    </string>
    <string name="sniper_description">
        "Click to show whole Snipers sorted by Rank."
        "The Rank is according to the damage of the Weapon"
    </string>
    <string name="pistol_description">
        "Click to show whole Pistol sorted by Rank."
        "The Rank is according to the damage of the Weapon"
    </string>
    <string name="grenade_description">
        "Click to show whole Grenade sorted by Rank."
        "The Rank is according to the damage of the Weapon"
    </string>
    <string name="attach_description">
        "Click to show whole Attachments used for corresponding weapons"
    </string>
    <string name="groza_description">
        Found only in supply drops. One of the strongest damage in Assault Rifles.
    </string>
    <string name="m416_description">
        Effective in all situations with high firepower. Equip all attachments to increase damage &amp; usability.
    </string>
    <string name="akm_description">
        This weapon has high damage but has very high recoil so shoot in bursts to control gun movement.
    </string>
    <string name="scarl_description">
        Equip attachments- to control recoil &amp; stability, making this weapon even more powerful.
    </string>
    <string name="m16a4_description">
        Shooting is unstable so fire in bursts to control weapon\'s recoil.
    </string>
    <string name="s12k_description">
        A very beginner-friendly shotgun that is capable of going full-auto for rapid fire shots.
    </string>
    <string name="s1897_description">
        Powerful in the early game but damage &amp; firepower is lower than most shotguns in-game.
    </string>
    <string name="awm_description">
        Obtainable only through supply drops. Strong damage that can penetrate a Level 3 helmet!
    </string>
    <string name="m24_description">
        Can only get through supply drops. A more powerful version of Kar98K.
    </string>
    <string name="kar98_description">
        Not as powerful as others but accessible and one of the few sniper rifles lootable from the ground.
    </string>
    <string name="sks_description">
        This marksman rifle has large DPS and rapid fire rate but has high recoil.
    </string>
    <string name="mk14_description">
        This DMR is capable of going full-auto and is only available through supply drops.
    </string>
    <string name="mini14_description">
        Not as powerful as other marksman rifles but is easy to use &amp; has low recoil.
    </string>
    <string name="vss_description">
        Weapon comes with built-in suppressor &amp; scope but damage output is low and bullet drop is very high.
    </string>
    <string name="m249_description">
        100-bullet magazine so you can shoot all you can! Reloading is long so reload when out of combat.
    </string>
    <string name="uzi_description">
        Powerful in short range combat. Equip an extended magazine for sustainability.
    </string>
    <string name="ump9_description">
        Can be used as an alternative to an Assault Rifle. Has low fire power but also very stable due to low recoil.
    </string>
    <string name="vector_description">
        Has low magazine capacity so equip an extended magazine to increase sustainability.
    </string>
    <string name="tommy_description">
        Has fast fire rate and not as powerful in mid-long range combat, utilize in short range fights!
    </string>
    <string name="dp28_description">
        Low recoil with a big magazine capacity. Slow reload speed but attachments are unnecessary to be effective.
    </string>
    <string name="p92_description">
        The P92 has balanced stats from its fire power, magazine size, up to its rate of fire. It\'s recoil is not so bad as well
    </string>
    <string name="p1911_description">
        The P1911 is a powerful pistol, dealing 35 damage with every shot.
        Three successful shots and it will have an unarmored player down.
    </string>
    <string name="r1895_description">
        The R1895 is a vintage revolver that utilizes the same ammo as the AKM, GROZA, Kar98K, among others.
        This allows easy loadout management &amp; you don\'t have to search for two separate types of ammo.
    </string>
    <string name="getstart_1">
        When you first jump into PUBG mobile you will get to create your character, it’s not the deepest character creation system we have ever seen,
        but the real customisation comes through cosmetic clothing unlocks further down the road.
        So there is no reason to spend too much time on this.
        After creating a character you will select your experience level with shooters and battle royale games.
        This setting will dictate if you play with bots for your first few matches, or with actual humans, so choose wisely,
        although a few warm up matches with bots is a solid idea for newcomers.
        To actually jump into your first game you will want to hit the big “START” button in the top left of the main lobby screen.
        However, by tapping the box below that you can select which type of match you want to play, squads, duos or solo and first person or third person.
        Once you have hit level five you can also choose which of the two currently available maps, Erangle or Miramar, you want to play, and at level 10
        you can choose to play in some of the arcade modes such as War or a Quick Match which is limited to eight minutes.
        Once you hit start button you’ll be thrown into a match and from thereon out its battle royale as you know it.
        Drop from the plane, find some loot, kill some fools and stay in the circle until you either meet an early end,
        or walk out with a chicken dinner.
    </string>
    <string name="getstart_0">
        Once installed you will either have to register to play as a guest, or link your Facebook or Twitter account.
        On iOS you can also choose to log in via your Game Center account, but you will have to hit the “more” button next to the other options to find the Game Center setting.
        After you have selected a way to log in and agreed to some terms and conditions, then you are good to go.
    </string>
    <string name="dif_mob_console">
        While Fortnite is the exact same game on mobile as it is on PC and console, the same cannot be said for PUBG.
        PUBG Mobile is its own thing, and there is no way to carry over progress from the PC and console versions to the mobile version.
        This is mostly because there is quite a few differences between the versions.
        The most obvious is the vastly different content available.
        Only two of the three maps PC players have are available on the mobile version, with Sanhok nowhere to be seen as of yet.
        The same can be said with a number of weapons, and there are a couple of very small differences on the maps.
        Then there are the very different cosmetics. With PUBG Mobile being free to play their main source of income is cosmetic items,
        so as you may expect there’s a lot more in the mobile than in the PC and Xbox versions.
        Some of the mobile only cosmetics are actually quite cool, and we would love to see them make their way to the other platforms at some point.
    </string>
    <string name="tip1">
        We already have tips for all three PUBG maps, which are accurately reproduced on PUBG mobile.
        For the most part if you are good on PC or console then you should be able to translate that success into PUBG Mobile,
        as it\'s effectively the same game. However,
        with that being said there are a few things you should be aware of when playing.
    </string>
    <string name="tip2">
        On PC and console leaning becomes second nature. Being able to stick your head out but keep the rest of your body safely
        behind cover makes it a lot harder to hit you, and is a core mechanic. But on mobile it can be harder to use this tactic
        as you’ll have to move your thumbs away from moving and aiming to do so. This does make it a little harder to use well,
        but with some practise you can master this and stop putting your whole body at risk. Oh,
        and make sure the buttons are actually activated in the settings menu.
    </string>
    <string name="tip3">
        Playing with sound is always going to be preferable, as it will allow you to hear what is going on in your vicinity,
        but if that isn’t possible then there is another way to work out where those shots are coming from. The direction of
        any shots in your direction, or those close to you, will be shown on the mini map.
        You can then spin to that position and unload a spray of bullets at whoever thought they had caught you off guard.
    </string>
    <string name="tip5">
        Sure, some people may say auto-aim is for noobs, but when it helps out this much there really is no reason to turn it off,
        unless you want to go pro. The auto-aim on PUBG Mobile is crazy good at times, and you should assume that all your
        foes will be using it too.
        Make sure to keep this on, and you will barely ever miss a shot again.
    </string>
    <string name="tip4">
        One of the ways that PUBG Mobile runs smoothly on lower end devices is to only render the grass and foliage close to the player, so that means if you think you are being a sneaky snake in the grass, you actually just look like a muppet crawling through a field to anyone with a 4x or better scope.
        Always stick to hard cover if possible. Crawling through the grass only really works in the very late game circles.
    </string>
</resources>